Upsert single patient personal info
